# order

./: .gitignore  README.md  SYSTEM_ARCHITECTURE.md  final_order.md  pyproject.toml  test_element_scrape.py  test_element_scrape_v2.py  test_scrape.py  test_scrapegraph.py
src/anthropos_order/: crew.py  main.py
src/anthropos_order/config/: agents.yaml  tasks.yaml
src/context/: A-Net Marketing strat 3017ac429141802f90f3fec47d75ee80.md  A-net market analysis in lithuanian.md  a-net model  heuristic_execution_laws.md  testing_flow_heuristic_omega3.md  testing_flow_nr1_omega3.md
src/context/decision making architecture/: logic.md
src/context/heuristic_videos/v2_omega3_20s/: script.md
