[project]
name = "anthropos_order"
version = "0.1.0"
description = "anthropos_order using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
    "scrapegraph-py>=1.46.0",
]

[project.scripts]
anthropos_order = "anthropos_order.main:run"
run_crew = "anthropos_order.main:run"
train = "anthropos_order.main:train"
replay = "anthropos_order.main:replay"
test = "anthropos_order.main:test"
run_with_trigger = "anthropos_order.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
